[tool.poetry]
name = "picklerick"
version = "0.2.1"
description = "Picklerick LLC Command Line Utility"
authors = ["Cosinato <cosinato@pm.me>"]

[tool.poetry.scripts]
klickbrick = "picklerick:main"
picklerick = "picklerick:main"

[tool.poetry.dependencies]
python = "^3.9"
behave = "^1.2.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
