[tool.poetry]
name = "picklerick"
version = "0.3.0"
description = "Picklerick LLC Command Line Utility"
authors = ["Cosinato <cosinato@pm.me>"]

[tool.poetry.scripts]
klickbrick = "picklerick:main"
picklerick = "picklerick:main"

[tool.poetry.dependencies]
python = "^3.9"
behave = "^1.2.6"
Flask = "^2.0.2"
connexion = {extras = ["swagger-ui"], version = "^2.10.0"}
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.feature
)/
'''
